<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/activity_details_city"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context="eufive.weatherapp.DetailsCityActivity">

    <TextView
        android:id="@+id/city_text_view"
        android:text="@string/city"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/city_name_et"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_marginBottom="@dimen/margin_for_text"
        android:layout_marginTop="@dimen/margin_for_text"
        android:layout_height="wrap_content"
        android:textSize="@dimen/city_details_text_size"
        android:textStyle="bold|italic"
        android:ems="10"/>

    <TextView
        android:id="@+id/temp_text_view"
        android:text="@string/temperature"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/temp_et"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold|italic"
        android:textSize="@dimen/city_details_text_size"
        android:layout_marginBottom="@dimen/margin_for_text"
        android:layout_marginTop="@dimen/margin_for_text"
        android:ems="10"/>

    <TextView
        android:id="@+id/min_temp_tv"
        android:text="@string/min_temperature"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/min_temp_et"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_for_text"
        android:layout_marginTop="@dimen/margin_for_text"
        android:textStyle="bold|italic"
        android:textSize="@dimen/city_details_text_size"
        android:ems="10"/>

    <TextView
        android:id="@+id/max_temperature"
        android:text="@string/max_temperature"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/max_temp_et"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold|italic"
        android:layout_marginBottom="@dimen/margin_for_text"
        android:layout_marginTop="@dimen/margin_for_text"
        android:ems="10"
        android:textSize="@dimen/city_details_text_size"/>

    <TextView
        android:id="@+id/wind_speed_tv"
        android:text="@string/wind_speed"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/wind_speed_et"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold|italic"
        android:layout_marginBottom="@dimen/margin_for_text"
        android:layout_marginTop="@dimen/margin_for_text"
        android:ems="10"
        android:textSize="@dimen/city_details_text_size"/>

    <TextView
        android:id="@+id/description_tv"
        android:text="@string/description"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/description_et"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_for_text"
        android:layout_marginTop="@dimen/margin_for_text"
        android:ems="10"
        android:textSize="@dimen/city_details_text_size"
        android:textStyle="bold|italic"/>

    <TextView
        android:id="@+id/pressure_tv"
        android:text="@string/pressure"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/pressure_et"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_for_text"
        android:layout_marginTop="@dimen/margin_for_text"
        android:textStyle="bold|italic"
        android:ems="10"
        android:textSize="@dimen/city_details_text_size"/>

    <TextView
        android:id="@+id/humidity_tv"
        android:text="@string/humidity"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/humidity_et"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_for_text"
        android:layout_marginTop="@dimen/margin_for_text"
        android:textStyle="bold|italic"
        android:ems="10"
        android:textSize="@dimen/city_details_text_size"/>

</LinearLayout>
