<android.support.v7.widget.CardView
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="@dimen/card_margin"
    android:layout_marginRight="@dimen/card_margin"
    card_view:cardCornerRadius="@dimen/card_corner_radius"
    android:layout_margin="@dimen/card_layout_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_layout"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/card_margin">

            <ImageView
                android:id="@+id/forecast_weather_icon"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                card_view:srcCompat="@android:color/background_light"
                android:scaleY="2.5"
                android:scaleX="2.5"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/forecast_date"
                android:text="@string/date"
                android:layout_marginRight="@dimen/margin_for_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/forecast_date_value"
                android:layout_width="match_parent"
                android:textStyle="bold|italic"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/forecast_min_temperature"
                android:text="@string/min_temp"
                android:layout_marginRight="@dimen/margin_for_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/forecast_min_temperature_value"
                android:textStyle="bold|italic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/forecast_max_temperature"
                android:text="@string/max_temp"
                android:layout_marginRight="@dimen/margin_for_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/forecast_max_temperature_value"
                android:layout_width="match_parent"
                android:textStyle="bold|italic"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/forecast_pressure"
                android:text="@string/pressure_colon"
                android:layout_width="wrap_content"
                android:layout_marginRight="@dimen/margin_for_text"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/forecast_pressure_value"
                android:layout_width="match_parent"
                android:textStyle="bold|italic"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/forecast_humidity"
                android:text="@string/humidity_colon"
                android:layout_width="wrap_content"
                android:layout_marginRight="@dimen/margin_for_text"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/forecast_humidity_value"
                android:layout_width="match_parent"
                android:textStyle="bold|italic"
                android:layout_height="wrap_content"/>
        </LinearLayout>

    </LinearLayout>
</android.support.v7.widget.CardView>