<android.support.v7.widget.CardView
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="@dimen/card_margin"
    android:layout_marginRight="@dimen/card_margin"
    card_view:cardCornerRadius="@dimen/card_corner_radius"
    android:layout_margin="@dimen/card_layout_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_layout"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/card_margin">

            <ImageView
                android:id="@+id/image_view"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                card_view:srcCompat="@android:color/background_light"
                android:scaleY="2.5"
                android:scaleX="2.5"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/name_of_city_value"
                android:gravity="center"
                android:layout_width="0dp"
                android:textSize="@dimen/city_details_text_size"
                android:textStyle="bold|italic"
                android:layout_marginBottom="@dimen/margin_for_text"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/max_temp_text_view"
                android:text="@string/max_temp"
                android:layout_marginRight="@dimen/margin_for_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_for_text"/>

            <TextView
                android:id="@+id/max_temp_value"
                android:layout_width="match_parent"
                android:textSize="@dimen/temperature_text_size"
                android:textStyle="bold|italic"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_for_text"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/min_temp_text_view"
                android:text="@string/min_temp"
                android:layout_marginRight="@dimen/margin_for_text"
                android:layout_marginBottom="@dimen/margin_for_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/min_temp_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_for_text"
                android:layout_marginRight="@dimen/margin_for_text"
                android:textSize="@dimen/temperature_text_size"
                android:textStyle="bold|italic"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        <TextView
            android:id="@+id/last_updated_text_view"
            android:text="@string/last_updated"
            android:layout_marginBottom="@dimen/margin_for_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/last_updated_value"
                android:layout_width="match_parent"
                android:layout_marginBottom="@dimen/margin_for_text"
                android:textStyle="italic"
                android:layout_height="wrap_content"/>

        </LinearLayout>

    </LinearLayout>
</android.support.v7.widget.CardView>